# agentic-soc-platform

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  README_ZH.md  TODO.md  db.sqlite3  manage.py  mcpserver.py  pyproject.toml
.claude-plugin/: marketplace.json
.run/: ASP.run.xml
AGENTS/: agent_cmdb.py  agent_knowledge.py  agent_siem.py  agent_threat_intelligence.py  cmdb_agent.py  siem_agent.py  ti_agent.py
ASF/: settings.py
ASP/: asgi.py  settings.py  urls.py  wsgi.py
Core/: apps.py  bootstrap.py  views.py
Lib/: api.py  apsmodule.py  baseapi.py  basemodule.py  baseplaybook.py  llmapi.py  llmfunc.py  log.py  monitor.py  montior.py  playbookloader.py  redis_client.py  threadmodulemanager.py  xcache.py
MODULES/: Cloud-01-AWS-IAM-Privilege-Escalation-via-AttachUserPolicy.py  Cloud-01-AWS-IAM-Privilege-Escalation-via-AttachUserPolicy_old.py  EDR-01-HOST-Vssadmin-Delete-Shadows.py  EDR-Rule-11-Suspicious-Process-Spawned-by-Office.py  ES-Rule-21-Phishing-User-Report-Mail.py  ES-Rule-21-Phishing_user_report_mail.py  Mail-01-User-Report-Phishing-Mail.py  NDR-Rule-05-Suspect-C2-Communication.py
PLAYBOOKS/: Alert_Analysis_Agent.py  Alert_Summary_Agent.py  Artifact_TI_Enrichment_By_AlienVaultOTX.py  Artifact_TI_Enrichment_By_Mock.py  Case_L3_SOC_Analyst_Agent.py  Case_L3_SOC_Analyst_Agent_With_Tools.py  Case_Threat_Hunting_Agent.py  Investigation.py  Investigation_Agent.py  Knowledge_Extraction.py  L3_SOC_Analyst_Agent_With_Tools.py  TI_Artifact_query_by_AlienVaultOTX.py  TI_Enrichment_By_AlienVaultOTX.py  TI_Enrichment_By_Mock.py  (+2 more)
backend/: Dockerfile  (+3 more)
cli/: README.md  pyproject.toml
cli/src/asp_cli/: __init__.py  main.py
cli/src/asp_cli/spec/: operations.json
(+253 files in other folders)
