[project]
name = "asp"
version = "0.1.0"
description = "Agentic SOC Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "channels>=4.3.2",
    "cryptography>=46.0.7",
    "django>=6.0.5",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "dnslib>=0.9.26",
    "dnspython>=2.8.0",
    "elasticsearch>=9.4.0",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-redis>=0.4.1",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "pycryptodome>=3.23.0",
    "pydantic>=2.13.4",
    "redis>=7.4.0",
    "requests>=2.33.0",
    "rsa>=4.9.1",
    "splunk-sdk>=3.0.0",
    "tldextract>=5.3.1",
    "urllib3>=2.7.0",
    "uvicorn>=0.48.0",
    "fastmcp>=3.3.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
